--- a/Lab_2/Grupo_22_Lab2.ipynb
+++ b/Lab_2/Grupo_22_Lab2.ipynb
@@ -11,6 +11,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Grupo 22\n",
+        "# Nos tocó Javascript por lo cual los puntos de los demás lenguajes no los hicimos."
+      ],
+      "metadata": {
+        "id": "CIGlgcizuEzY"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
